# ProyectoChess

./: Alfil.cpp  Alfil.h  CMakeLists.txt  Caballo.cpp  Caballo.h  Casilla.cpp  Casilla.h  Dama.cpp  Dama.h  Game.cpp  Game.h  Peon.cpp  Peon.h  Pieza.cpp  Pieza.h  Rey.cpp  Rey.h  Tablero.cpp  Tablero.h  Torre.cpp  Torre.h  Update README.md  imagenes.qrc  main.cpp
